--- a/.github/workflows/build-debian.yaml
+++ b/.github/workflows/build-debian.yaml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Make build script executable
         run: |
-          chmod +x build.sh
+          chmod +x ./setup.sh
 
       - name: Run build Apache + PHP
         run: |
