--- a/.github/workflows/build-debian.yaml
+++ b/.github/workflows/build-debian.yaml
@@ -73,7 +73,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.tag.outputs.tag }}
-          name: Apache + PHP Runtime ${{ steps.tag.outputs.tag }}
+          name: Release PHP Apache ${{ steps.tag.outputs.tag }}
           draft: true
           generate_release_notes: true
         env:
